deploy/k8s/cluster/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hawtio-online
spec:
  template:
    spec:
      containers:
        - name: hawtio-online
